--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </select>
 
                 <label for="duration">Sitting Duration (mins):</label>
-                <input type="number" id="duration">
+                <input type="number" id="duration" min="0" max="999">
 
                 <label for="openEnd">Open End:</label>
                 <input type="checkbox" id="openEnd">
@@ -44,7 +44,7 @@
             <br>
             <div>
                 <label for="intervals">Number of intervals:</label>
-                <input type="number" id="intervals">
+                <input type="number" id="intervals" min="0" max="999">
             </div>
             <br>
             <div>
@@ -64,7 +64,7 @@
             <br>
             <div>
                 <label for="endingTime">Ending Time (mins):</label>
-                <input type="number" id="endingTime" readonly>
+                <input type="number" id="endingTime" min="0" max="999" readonly>
 
                 <label for="notificationType">Notification Type:</label>
                 <select id="notificationType">
